--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.event_detail.EventDetailActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".ui.MainNavigation"/>
         <activity
             android:name=".ui.SplashScreenCustom"
             android:exported="true">
